fix: Minor fix